# apsdk-public

./: .clang-format  .gitignore  .gitmodules  CIConfig.ini  CMakeLists.txt  generate_ios_proj.sh  generate_linux.sh  generate_linux_proj.sh  generate_mac_proj.sh  generate_osx_proj.sh  generate_vs_proj.bat  generate_win_proj.bat  generate_win_x64_proj.bat  generate_win_x86_proj.bat  generate_xcode_proj.sh  readme.md
.github/workflows/: build-android.yml  build-ios.yml  build-linux.yml  build-macos.yml  build-windows.yml
demo/: CMakeLists.txt  aac_eld.cpp  aac_eld.h  aps-demo.cpp  apsdk-demo.cpp  flv_stream_builder.cpp  flv_stream_builder.h  flv_stream_builder.hpp
demo/audiodec/: aac_eld.cpp  aac_eld.h  alac.cpp  alac.h
demo/esplayer/: CMakeLists.txt  es_player.cpp  es_player.h
demo/fdk-aac/: CMakeLists.txt
demo/fdk-aac/libAACdec/src/: aac_ram.cpp  aac_rom.cpp  aacdec_drc.cpp  aacdec_hcr.cpp  aacdec_hcr_bit.cpp  aacdec_hcrs.cpp  aacdec_pns.cpp  aacdec_tns.cpp  aacdecoder.cpp  aacdecoder_lib.cpp  block.cpp  channel.cpp  channelinfo.cpp  conceal.cpp  ldfiltbank.cpp  pulsedata.cpp  rvlc.cpp  rvlcbit.cpp  rvlcconceal.cpp  stereo.cpp
demo/fdk-aac/libAACenc/src/: aacEnc_ram.cpp  aacEnc_rom.cpp  aacenc.cpp  aacenc_lib.cpp  aacenc_pns.cpp  aacenc_tns.cpp  adj_thr.cpp  band_nrg.cpp  bandwidth.cpp  bandwidth.h  bit_cnt.cpp  bitenc.cpp  block_switch.cpp  channel_map.cpp  chaosmeasure.cpp  dyn_bits.cpp  grp_data.cpp  intensity.cpp  line_pe.cpp  metadata_compressor.cpp  metadata_main.cpp  ms_stereo.cpp  noisedet.cpp  pnsparam.cpp  pre_echo_control.cpp  psy_configuration.cpp  psy_main.cpp  qc_main.cpp  quantize.cpp  sf_estim.cpp  spreading.cpp  tonality.cpp  transform.cpp
demo/fdk-aac/libFDK/src/: FDK_bitbuffer.cpp  FDK_core.cpp  FDK_crc.cpp  FDK_hybrid.cpp  FDK_tools_rom.cpp  FDK_trigFcts.cpp  autocorr2nd.cpp  dct.cpp  fft.cpp  fft_rad2.cpp  fixpoint_math.cpp  mdct.cpp  qmf.cpp  scale.cpp
demo/fdk-aac/libMpegTPDec/src/: tpdec_adif.cpp  tpdec_adts.cpp  tpdec_asc.cpp  tpdec_drm.cpp  tpdec_latm.cpp  tpdec_lib.cpp
demo/fdk-aac/libMpegTPEnc/src/: tpenc_adif.cpp  tpenc_adts.cpp  tpenc_asc.cpp  tpenc_latm.cpp  tpenc_lib.cpp
demo/fdk-aac/libPCMutils/src/: limiter.cpp  pcmutils_lib.cpp
demo/fdk-aac/libSBRdec/src/: env_calc.cpp  env_dec.cpp  env_extr.cpp  huff_dec.cpp  lpp_tran.cpp  psbitdec.cpp  psdec.cpp  psdec_hybrid.cpp  sbr_crc.cpp  sbr_deb.cpp  sbr_dec.cpp  sbr_ram.cpp  sbr_rom.cpp  sbrdec_drc.cpp  sbrdec_freq_sca.cpp  sbrdecoder.cpp
demo/fdk-aac/libSBRenc/src/: bit_sbr.cpp  code_env.cpp  env_bit.cpp  env_est.cpp  fram_gen.cpp  invf_est.cpp  mh_det.cpp  nf_est.cpp  ps_bitenc.cpp  ps_encode.cpp  ps_main.cpp  resampler.cpp  sbr_encoder.cpp  sbr_misc.cpp  sbr_ram.cpp  sbr_rom.cpp  sbrenc_freq_sca.cpp  ton_corr.cpp  tran_det.cpp
demo/fdk-aac/libSYS/src/: cmdl_parser.cpp  conv_string.cpp  genericStds.cpp  wav_file.cpp
include/: ap_config.h  ap_export.h  ap_handler.h  ap_server.h  ap_session.h  ap_types.h  aps.h
jni/: CMakeLists.txt
src/: CMakeLists.txt  ap_config.cpp  ap_config.h  ap_crypto.cpp  ap_crypto.h  ap_export.h  ap_handler.h  ap_server.cpp  ap_server.h  ap_session.h  ap_types.h  aps.cpp  aps.h  aps.hpp
src/crypto/: aes.c  aes.h  ap_aes.cpp  ap_aes.h  ap_crypto.cpp  ap_crypto.h
src/mdns/: dns_sd.h  net_service.cpp  net_service.h  net_service_impl.h
src/mdns/Android/: net_service_impl.cpp  net_service_impl.h
src/mdns/Linux/: net_service_impl.cpp
src/mdns/Windows/: net_service_impl.cpp  net_service_impl.h
src/mdns/macOS/: net_service_impl.mm
src/network/: rtp_types.h  tcp_service.h  udp_service.h  xtxp_connection_base.cpp  xtxp_connection_base.h  xtxp_message.cpp  xtxp_message.h
src/service/: ap_airplay_service.cpp  ap_airplay_service.h  ap_airplay_service_details.h  ap_audio_stream_service.cpp  ap_audio_stream_service.h  ap_audio_stream_service_details.h  ap_casting_content_parser.cpp  ap_casting_content_parser.h  ap_casting_event_connection_manager.cpp  ap_casting_event_connection_manager.h  ap_casting_media_data_store.cpp  ap_casting_media_data_store.h  ap_casting_media_http_service.cpp  ap_casting_media_http_service.h  ap_content_parser.cpp  ap_content_parser.h  ap_event_connection_manager.cpp  ap_event_connection_manager.h  ap_media_data_store.cpp  ap_media_data_store.h  ap_media_http_service.cpp  ap_media_http_service.h  ap_mirror_stream_service.cpp  ap_mirror_stream_service.h  ap_mirror_stream_service_details.h  ap_mirroring_audio_stream_service.cpp  ap_mirroring_audio_stream_service.h  ap_mirroring_audio_stream_service_details.h  ap_mirroring_timing_sync_service.cpp  ap_mirroring_timing_sync_service.h  ap_mirroring_video_stream_service.cpp  ap_mirroring_video_stream_service.h  ap_mirroring_video_stream_service_details.h  ap_timing_sync_service.cpp  ap_timing_sync_service.h  ap_types.h  ap_video_stream_service.cpp  ap_video_stream_service.h  ap_video_stream_service_details.h
src/utils/: logger.cpp  logger.h  packing.h  plist.cpp  plist.h  utils.cpp  utils.h
src/utils/Android/: utils_impl.cpp
src/utils/Windows/: utils_impl.cpp
src/utils/macOS/: utils_impl.cpp
tools/rmdns/: publish_airplay_service.bat  publish_airplay_service.sh
